fix CSS, make text a little more readable

--- a/public/css/auth.css
+++ b/public/css/auth.css
@@ -1,11 +1,13 @@
 body {
   background: url('/img/auth-page-background.png');
   background-repeat: no-repeat;
-  background-size: 100% auto;
+  background-size: cover;
 }
 
 header.navbar {
   margin-bottom: 0;
+  border-radius: 0;
+  box-shadow: 0 0 1px rgba(0, 0, 0, 0.5);
 }
 
 #main {
@@ -14,6 +16,7 @@ header.navbar {
 
 .auth-title-row {
   color: white;
+  text-shadow: 1px 1px 0 rgba(0,0,0, 0.4);
 }
 
 label {
